Enabled a flag for CI environment avoding a module call

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ install:
   - pip install Pillow
   - pip install gym-super-mario-bros
 script:
-  - python app_test.py
+  - export CI='enabled' ; python app_test.py
