--- a/requirements.txt
+++ b/requirements.txt
@@ -44,3 +44,50 @@ traitlets==4.3.2
 urllib3==1.22
 wcwidth==0.1.7
 Werkzeug==0.14.1
+absl-py==0.2.0
+astor==0.6.2
+atari-py==0.1.1
+backcall==0.1.0
+bleach==1.5.0
+certifi==2018.4.16
+chardet==3.0.4
+decorator==4.3.0
+future==0.16.0
+gast==0.2.0
+grpcio==1.11.0
+gym==0.10.5
+gym-gomoku==0.0.1
+h5py==2.7.1
+html5lib==0.9999999
+idna==2.6
+ipython==6.3.1
+ipython-genutils==0.2.0
+jedi==0.12.0
+Keras==2.1.6
+Markdown==2.6.11
+numpy==1.14.3
+pandas==0.22.0
+parso==0.2.0
+pexpect==4.5.0
+pickleshare==0.7.4
+Pillow==5.1.0
+prompt-toolkit==1.0.15
+protobuf==3.5.2.post1
+ptyprocess==0.5.2
+pyglet==1.3.2
+Pygments==2.2.0
+PyOpenGL==3.1.0
+python-dateutil==2.7.2
+pytz==2018.4
+PyYAML==3.12
+requests==2.18.4
+scipy==1.0.1
+simplegeneric==0.8.1
+six==1.11.0
+tensorboard==1.8.0
+tensorflow==1.8.0
+termcolor==1.1.0
+traitlets==4.3.2
+urllib3==1.22
+wcwidth==0.1.7
+Werkzeug==0.14.1
